--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
-<link rel="stylesheet" href="asset/pvw2/css/bootstrap-italia.min.css">
-<link rel="stylesheet" href="asset/pvw2/css/font-awesome.css">
-<link rel="stylesheet" href="asset/pvw2/css/xfonts.css">
-<link rel="stylesheet" href="asset/pvw2/css/common.css">
-<link rel="stylesheet" href="asset/pvw2/css/spid.css">
-<link rel="stylesheet" href="asset/commons/lib/jsx/jQuery/plugins/realperson/jquery.realperson.css">
+<link rel="stylesheet" href="{{ site.url }}/asset/pvw2/css/bootstrap-italia.min.css">
+<link rel="stylesheet" href="{{ site.url }}/asset/pvw2/css/font-awesome.css">
+<link rel="stylesheet" href="{{ site.url }}/asset/pvw2/css/xfonts.css">
+<link rel="stylesheet" href="{{ site.url }}/asset/pvw2/css/common.css">
+<link rel="stylesheet" href="{{ site.url }}/asset/pvw2/css/spid.css">
+<link rel="stylesheet" href="{{ site.url }}/asset/commons/lib/jsx/jQuery/plugins/realperson/jquery.realperson.css">
 
 <style>
 body
@@ -770,10 +770,10 @@ border: 1px solid #e3e4e6;
 
 
 
-<link rel="stylesheet" href="asset/pvw2/css/schoolplanner.css" media="screen">
-<link rel="stylesheet" href="asset/pvw2/css/fullcalendar.css" media="screen">
-<link rel="stylesheet" href="asset/pvw2/css/aos.css" media="screen">
-<link rel="stylesheet" href="asset/pvw2/css/vendor/splide-core.min.css" media="screen">
+<link rel="stylesheet" href="{{ site.url }}/asset/pvw2/css/schoolplanner.css" media="screen">
+<link rel="stylesheet" href="{{ site.url }}/asset/pvw2/css/fullcalendar.css" media="screen">
+<link rel="stylesheet" href="{{ site.url }}/asset/pvw2/css/aos.css" media="screen">
+<link rel="stylesheet" href="{{ site.url }}/asset/pvw2/css/vendor/splide-core.min.css" media="screen">
 
 
 <style>
