--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 <div class="it-header-slim-wrapper-content">
 <div class="nav-mobile">
 
-<a href="https://gjones.pologj.it/" target="_blank" title="GABRIEL JONES DESK"><img src="/desk.png" class="img-ministero" alt="LOGO GABRIEL JONES DESK"></a>
+<a href="https://gjones.pologj.it/" target="_blank" title="GABRIEL JONES DESK">SITO AMMINISTRATO DA GABRIEL JONES DESK</a>
 
 
 </div>
@@ -375,28 +375,13 @@ Attendere il completamento dell'operazione...
 
 <h1>
 <span class="media">
-<img class="align-self-center logo_scuola" src="{{ site.url }}/assets/logo.png" alt="LOGO">
+<img class="align-self-center logo_scuola" src="{{ site.url }}/asset/logosito.png" alt="LOGO">
 
 </span>
 </h1>
 
 
 </a>
-</div>
-<div class="it-right-zone">
-<div class="it-search-wrapper">
-<div class="hidden-xs search" style="float:right;">
-<div class="pull-right">
-<span class="input-group-btn">
-<button class="btn-search search-link rounded-icon" type="button" data-toggle="modal" data-target="#searchModal" aria-label="Apri ricerca" data-element="search-modal-button">
-<svg class="icon">
-<use xlink:href="/pvw2/img/sprite.svg#it-search"></use>
-</svg>
-</button>
-</span>
-</div>
-</div>
-</div>
 </div>
 </div>
 </div>
