--- a/_includes/header.html
+++ b/_includes/header.html
@@ -397,7 +397,7 @@ Attendere il completamento dell'operazione...
 <nav class="navbar navbar-expand-lg has-megamenu" aria-label="Menu principale">
 <button class="custom-navbar-toggler" type="button" aria-controls="nav10" aria-expanded="false" aria-label="Toggle navigation" data-target="#nav10">
 <svg class="icon">
-<use xlink:href="/pvw2/img/sprite.svg#it-burger"></use>
+<use xlink:href="{{ site.url }}/pvw2/img/sprite.svg"></use>
 </svg>
 </button>
 <div class="navbar-collapsable" id="nav10">
@@ -409,8 +409,8 @@ Attendere il completamento dell'operazione...
 <ul class="navbar-nav" data-element="menu">
 
 <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="{{ site.url }}/#" data-toggle="dropdown" aria-expanded="false">
-<span>Scuola</span>
+<a class="nav-link dropdown-toggle" href="{{ site.url }}/org" data-toggle="dropdown" aria-expanded="false">
+<span>ORGANIZZAZIONE</span>
 <svg class="icon icon-xs">
 <use xlink:href="/pvw2/img/sprite.svg#it-expand"></use>
 </svg>
@@ -421,28 +421,28 @@ Attendere il completamento dell'operazione...
 <ul class="link-list" data-element="school-submenu">
 
 <li class="d-none">
-<a class="list-item" href="{{ site.url }}//panoramica/Scuola" target="_self" data-element="overview">
+<a class="list-item" href="{{ site.url }}/organizzazione" target="_self" data-element="overview">
 <span><strong>Panoramica</strong></span>
 </a>
 </li>
 
 
 <li>
-<a class="list-item" href="{{ site.url }}//pagine/presentazione" target="_self" >
-<span>Presentazione</span>
+<a class="list-item" href="{{ site.url }}/organizzazione/progetti/" target="_self" >
+<span>Progetti</span>
 </a>
 </li>
 
 
 <li>
-<a class="list-item" href="{{ site.url }}//luoghi" target="_self" data-element="school-locations">
-<span>I luoghi</span>
+<a class="list-item" href="{{ site.url }}/organizzazione/persone/" target="_self" data-element="school-locations">
+<span>Le Persone</span>
 </a>
 </li>
 
 
 <li>
-<a class="list-item" href="{{ site.url }}//persone" target="_self" >
+<a class="list-item" href="{{ site.url }}/organizzazione/persone" target="_self" >
 <span>Le persone</span>
 </a>
 </li>
