--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,12 @@
 <link rel="stylesheet" href="{{ site.url }}/asset/commons/lib/jsx/jQuery/plugins/realperson/jquery.realperson.css">
 
 <style>
+
+svg {
+    fill: black;
+    stroke: black; /* se l'SVG usa stroke */
+}
+
 body
 {
 font-family: 'Titillium Web';
