--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,10 @@
 
 <style>
 
-svg {
-    fill: black;
-    stroke: black; /* se l'SVG usa stroke */
+.custom-navbar-toggler svg {
+    fill: #3941A0;
 }
+
 
 body
 {
