--- a/_includes/header.html
+++ b/_includes/header.html
@@ -397,7 +397,7 @@ Attendere il completamento dell'operazione...
 <nav class="navbar navbar-expand-lg has-megamenu" aria-label="Menu principale">
 <button class="custom-navbar-toggler" type="button" aria-controls="nav10" aria-expanded="false" aria-label="Toggle navigation" data-target="#nav10">
 <svg class="icon">
-<use xlink:href="pvw2/img/sprite.svg"></use>
+<use xlink:href="pvw2/img/sprite.svg#it-burger"></use>
 </svg>
 </button>
 <div class="navbar-collapsable" id="nav10">
