--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 <div class="it-header-slim-wrapper-content">
 <div class="nav-mobile">
 
-<a href="https://gjones.pologj.it/" target="_blank" title="GABRIEL JONES DESK">SITO AMMINISTRATO DA GABRIEL JONES DESK</a>
+<a href="https://gjones.pologj.it/public/home?" target="_blank" title="GABRIEL JONES DESK"><b>GABRIEL JONES DESK</b></a>
 
 
 </div>
