--- a/_includes/header.html
+++ b/_includes/header.html
@@ -687,7 +687,7 @@ Attendere il completamento dell'operazione...
     auth.onAuthStateChanged(function(user) {
       if (user) {
         userArea.innerHTML = `
-          <a href="/area/" class="btn btn-success btn-sm">
+          <a href="/area/" class="btn btn-sm">
             <i class="fa fa-user-circle"></i> Ciao, Gabriel
           </a>
         `;
