--- a/_includes/header.html
+++ b/_includes/header.html
@@ -688,7 +688,7 @@ Attendere il completamento dell'operazione...
       if (user) {
         userArea.innerHTML = `
           <a href="/area/" class="btn btn-sm">
-            <i class="fa fa-user-circle"></i> Ciao, Gabriel
+            <i class="fa fa-user-circle"></i> Ciao, <b>Gabriel</b>
           </a>
         `;
       }
