--- a/_includes/header.html
+++ b/_includes/header.html
@@ -360,8 +360,8 @@ Attendere il completamento dell'operazione...
 <ul class="navbar-nav" data-element="menu">
 
 <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="{{ site.url }}/org" data-toggle="dropdown" aria-expanded="false">
-<span>ORGANIZZAZIONE</span>
+<a class="nav-link dropdown-toggle" href="{{ site.url }}/#" data-toggle="dropdown" aria-expanded="false">
+<span>Gabriel Jones</span>
 <svg class="icon icon-xs">
 <use xlink:href="/pvw2/img/sprite.svg#it-expand"></use>
 </svg>
@@ -372,57 +372,62 @@ Attendere il completamento dell'operazione...
 <ul class="link-list" data-element="school-submenu">
 
 <li class="d-none">
-<a class="list-item" href="{{ site.url }}/organizzazione" target="_self" data-element="overview">
-<span><strong>Panoramica</strong></span>
+<a class="list-item" href="{{ site.url }}/" target="_self" data-element="overview">
+<span><strong><span class="rounded-icon" aria-hidden="true">
+        <svg class="icon icon-primary">
+            <use xlink:href="/pvw2/img/sprite.svg#it-user"></use>
+        </svg>
+    </span>
+  </strong></span>
 </a>
 </li>
 
 
 <li>
-<a class="list-item" href="{{ site.url }}/organizzazione/progetti/" target="_self" >
-<span>Progetti</span>
+<a class="list-item" href="{{ site.url }}/areasocioeducativa/" target="_self" >
+<span>Area Socio Educativa</span>
 </a>
 </li>
 
 
 <li>
-<a class="list-item" href="{{ site.url }}/organizzazione/persone/" target="_self" data-element="school-locations">
-<span>Le Persone</span>
+<a class="list-item" href="{{ site.url }}/biblioteca/" target="_self" data-element="school-locations">
+<span>Bibliotca Personale</span>
 </a>
 </li>
 
 
 <li>
-<a class="list-item" href="{{ site.url }}/organizzazione/persone" target="_self" >
-<span>Le persone</span>
+<a class="list-item" href="{{ site.url }}/fatturazioni/" target="_self" >
+<span>FATTURE</span>
 </a>
 </li>
 
 
 <li>
-<a class="list-item" href="{{ site.url }}//pagine/i-numeri-della-scuola" target="_self" >
-<span>I numeri della scuola</span>
+<a class="list-item" href="{{ site.url }}/schede/OSF/" target="_self" >
+<span>Fondazione OSF</span>
 </a>
 </li>
 
 
 <li>
-<a class="list-item" href="{{ site.url }}//carte-della-scuola" target="_self" >
-<span>Le carte della scuola</span>
+<a class="list-item" href="{{ site.url }}/FOIA/" target="_self" >
+<span>FOIA</span>
 </a>
 </li>
 
 
 <li>
-<a class="list-item" href="{{ site.url }}//organizzazione" target="_self" >
-<span>Organizzazione</span>
+<a class="list-item" href="{{ site.url }}/arealavorativa/" target="_self" >
+<span>Area Lavoro</span>
 </a>
 </li>
 
 
 <li>
-<a class="list-item" href="{{ site.url }}//pagine/la-storia" target="_self" >
-<span>La storia</span>
+<a class="list-item" href="{{ site.url }}/schede/" target="_self" >
+<span>Schee</span>
 </a>
 </li>
 
@@ -435,7 +440,7 @@ Attendere il completamento dell'operazione...
 
 <li class="nav-item dropdown">
 <a class="nav-link dropdown-toggle" href="{{ site.url }}/#" data-toggle="dropdown" aria-expanded="false">
-<span>Servizi</span>
+<span>Area Socio Educativa</span>
 <svg class="icon icon-xs">
 <use xlink:href="/pvw2/img/sprite.svg#it-expand"></use>
 </svg>
