--- a/_includes/header.html
+++ b/_includes/header.html
@@ -361,7 +361,20 @@ Attendere il completamento dell'operazione...
 
 <li class="nav-item dropdown">
 <a class="nav-link dropdown-toggle" href="{{ site.url }}/#" data-toggle="dropdown" aria-expanded="false">
-<span>Gabriel Jones</span>
+<span>
+  
+
+  <span><strong><span class="rounded-icon" aria-hidden="true">
+        <svg class="icon icon-primary">
+            <use xlink:href="/pvw2/#it-user"></use>
+        </svg>
+    </span>
+  </strong></span>
+
+
+
+  
+</span>
 <svg class="icon icon-xs">
 <use xlink:href="/pvw2/img/sprite.svg#it-expand"></use>
 </svg>
@@ -373,12 +386,7 @@ Attendere il completamento dell'operazione...
 
 <li class="d-none">
 <a class="list-item" href="{{ site.url }}/" target="_self" data-element="overview">
-<span><strong><span class="rounded-icon" aria-hidden="true">
-        <svg class="icon icon-primary">
-            <use xlink:href="/pvw2/img/sprite.svg#it-user"></use>
-        </svg>
-    </span>
-  </strong></span>
+<span><strong>Home</strong></span>
 </a>
 </li>
 
