--- a/_includes/header.html
+++ b/_includes/header.html
@@ -362,18 +362,12 @@ Attendere il completamento dell'operazione...
 <li class="nav-item dropdown">
 <a class="nav-link dropdown-toggle" href="{{ site.url }}/#" data-toggle="dropdown" aria-expanded="false">
 <span>
-  
-
-  <span><strong><span class="rounded-icon" aria-hidden="true">
+<strong><span class="rounded-icon" aria-hidden="true">
         <svg class="icon icon-primary">
             <use xlink:href="/pvw2/#it-user"></use>
         </svg>
     </span>
-  </strong></span>
-
-
-
-  
+  </strong>
 </span>
 <svg class="icon icon-xs">
 <use xlink:href="/pvw2/img/sprite.svg#it-expand"></use>
