--- a/_includes/header.html
+++ b/_includes/header.html
@@ -364,7 +364,7 @@ Attendere il completamento dell'operazione...
 <span>
 <strong><span class="rounded-icon" aria-hidden="true">
         <svg class="icon icon-primary">
-            <use xlink:href="/pvw2/#it-user"></use>
+            <use xlink:href="/pvw2/img/sprite.svg#it-user"></use>
         </svg>
     </span>
   </strong>
